--- a/src/style.css
+++ b/src/style.css
@@ -107,9 +107,91 @@ footer {
     height: 24px;
 }
 
+.balatro-grid {
+    display: flex;
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+    justify-content: center;
+    flex: 1;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+.balatro-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
+    border: 2px solid white;
+    border-radius: 1rem;
+    width: 15rem;
+  
+    background-color: #374244;
+
+    font-family: 'm6x11plus';
+    color: white;
+    text-shadow: #000 2px 2px 2px;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.image-wrapper {
+    position: relative;
+    width: 142px;
+    height: 190px;
+}
+
+.image-wrapper .main-img,
+.image-wrapper .stake-img {
+    width: 100%;
+    height: 100%;
+    image-rendering: pixelated;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.image-wrapper .main-img {
+    filter: drop-shadow(0px 5px #22222281);
+}
+
+.image-wrapper .main-img {
+    position: relative;
+}
+
+.balatro-container .balatro-rarity {
+    width: 142px;
+    border-radius: 8px;
+    padding: 8px;
+    background-color: #F7D762
+}
+
+.collapsible {
+    background-color: #374244;
+    color: white;
+    padding: 1rem;
+    border: 2px solid white;
+    border-radius: 1rem;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: larger;
+}
+
+.collapsible-content {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
 @font-face {
     font-family: MSGothic;
     src: url(ttf/MSGothic.ttf);
+}
+
+@font-face {
+    font-family: 'm6x11plus';
+    src: url(ttf/m6x11plus.ttf) format('truetype');
 }
 
 @-webkit-keyframes scrolling {
