--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,8 @@ body {
     font-family: 'Eurostile Regular';
 
     padding: 10px;
+
+    position: relative;
 }
 
 .header a {
@@ -22,8 +24,18 @@ body {
 
     font-size: clamp(1rem, 2vw, 2.5rem);
 }
+
 .header a:hover {
     color: #58A4B0;
+}
+
+.header img {
+    position: absolute;
+    left: 75%;
+    top: 50%;
+    transform: translateY(-51%);
+    height: 100%;
+    width: auto;
 }
 
 .section {
@@ -38,6 +50,7 @@ body {
     padding: 1rem;
 
     margin: 2%;
+    overflow: hidden;
 }
 
 .colored-container {
@@ -87,9 +100,29 @@ a {
     position: absolute;
     right: 0px;
     bottom: 0px;
+    z-index: 2;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
 
-    width: 100px;
-    padding: 20px;
+.hidden-text {
+    color: white;
+    font-family: 'Eurostile Regular';
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    z-index: 1;
+    padding: 5px 10px;
+    transition: transform 0.5s ease-in-out;
+    white-space: nowrap;
+}
+
+.slide-left {
+    transform: translateX(-75px); 
+}
+
+.slide-right {
+    transform: translateX(0);
 }
 
 @font-face {
